--- a/styles/style.css
+++ b/styles/style.css
@@ -91,6 +91,13 @@ main {
   gap: 24px;
   grid-template-columns: repeat(3, 1fr);
 }
+.card {
+  border: 1px solid #e8e8e8;
+  border-radius: 10px;
+}
+.card img {
+  width: 100%;
+}
 .banner {
   width: 100%;
 }
@@ -100,13 +107,18 @@ main {
   border-radius: 5px;
   display: inline-block;
   padding: 4px 10px;
-  margin: 20px;
+  margin: 20px 0 0 20px;
 }
 .title h3 {
   font-size: 18px;
   font-weight: 500;
+  margin: 15px 0 0 20px;
 }
 .info {
   display: flex;
   column-gap: 30px;
+}
+.icons {
+  padding-right: 10px;
+  margin: 15px 0 15px 20px;
 }
