media query for mobile of hero section

--- a/styles/upcoming-match.css
+++ b/styles/upcoming-match.css
@@ -17,6 +17,7 @@ main {
   display: flex;
   justify-content: center;
   margin-top: 50px;
+  height: 646px;
 }
 
 .hero-container {
@@ -25,7 +26,6 @@ main {
   color: #ffffff;
   width: 80vw;
   border-radius: 30px;
-  overflow: hidden;
 }
 .hero-info {
   width: 50%;
@@ -43,10 +43,9 @@ main {
 .hero-img {
   align-self: flex-end;
   width: 50%;
-  margin-top: 30px;
 }
 .hero-img img {
-  width: 100%;
+  width: 80%;
 }
 .live-btn {
   margin-top: 30px;
@@ -56,10 +55,6 @@ main {
   padding: 16px 25px;
   background-color: #dd0000;
   border-radius: 5px;
-}
-.menu .active {
-  background-color: #dd0000;
-  color: white;
 }
 /* middle section  */
 .middle-container {
@@ -99,12 +94,29 @@ main {
 .card {
   border: 1px solid #e8e8e8;
   border-radius: 10px;
+  height: 242px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .card img {
   width: 100%;
 }
-.banner {
+.flag {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+}
+.flag span {
+  font-size: 16px;
+  font-weight: 700;
+}
+.flag img {
+  width: 93.04px;
+  height: 56.18px;
 }
 .tag {
   font-size: 16px;
@@ -115,18 +127,29 @@ main {
   margin: 20px 0 0 20px;
 }
 .title h3 {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 500;
-  margin: 15px 0 0 20px;
+  margin-top: 20px;
+  text-align: center;
 }
 .info {
   display: flex;
   column-gap: 30px;
   margin-bottom: 20px;
+  color: #4d4d4d;
+  text-align: center;
+}
+.info p {
+  width: 100%;
+  margin-top: 10px;
 }
 .icons {
   padding-right: 10px;
   margin: 15px 0 15px 20px;
+}
+.menu .active {
+  background-color: #dd0000;
+  color: white;
 }
 /* footer section  */
 footer {
@@ -157,38 +180,3 @@ footer hr {
   font-size: 16px;
   padding-right: 70px;
 }
-
-/* media queries */
-/* mobile  */
-@media only screen and (max-width: 576px) {
-  .hero-container {
-    flex-direction: column;
-  }
-  .hero-info {
-    display: flex;
-    margin: 0;
-    flex-direction: column;
-    align-items: center;
-  }
-  .hero-img {
-    align-self: center;
-    justify-self: flex-end;
-  }
-  .hero-img img {
-    margin-top: 20px;
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
-  }
-  .hero-info h1 {
-    font-size: 22px;
-    text-align: center;
-    margin-top: 28px;
-  }
-  .hero-info p {
-    font-size: 14px;
-    text-align: center;
-  }
-}
-
-/* tablet */
