--- a/styles/style.css
+++ b/styles/style.css
@@ -43,10 +43,16 @@ main {
 .hero-img {
   align-self: flex-end;
   width: 50%;
-  margin-top: 30px;
+  opacity: 0.5;
+}
+
+.hero-img:hover {
+  transition: 3s;
+  transform: scale(0.9);
+  opacity: 1;
 }
 .hero-img img {
-  width: 100%;
+  width: 80%;
 }
 .live-btn {
   margin-top: 30px;
@@ -57,6 +63,7 @@ main {
   background-color: #dd0000;
   border-radius: 5px;
 }
+
 .menu .active {
   background-color: #dd0000;
   color: white;
@@ -128,6 +135,18 @@ main {
   padding-right: 10px;
   margin: 15px 0 15px 20px;
 }
+.view-btn {
+  margin-top: 30px;
+  text-decoration: none;
+  color: #ffff;
+  font-size: 20px;
+  padding: 16px 30px;
+  background-color: #dd0000;
+  border-radius: 5px;
+}
+.visible {
+  display: none;
+}
 /* footer section  */
 footer {
   margin-top: 130px;
@@ -150,17 +169,21 @@ footer hr {
 }
 .footer-menu {
   margin-bottom: 130px;
+  display: flex;
+  column-gap: 5%;
+  width: 80%;
+  justify-content: space-around;
+  align-items: center;
 }
 .footer-menu a {
   text-decoration: none;
   color: #b9b9b9;
   font-size: 16px;
-  padding-right: 70px;
 }
 
 /* media queries */
 /* mobile  */
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 576px) and (max-width: 833px) {
   .hero-container {
     flex-direction: column;
   }
@@ -189,6 +212,95 @@ footer hr {
     font-size: 14px;
     text-align: center;
   }
+  .hero-info p {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .middle-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .cards {
+    grid-template-columns: 1fr;
+    width: 100%;
+    margin-top: 30px;
+  }
+  .menu {
+    display: flex;
+
+    height: unset;
+    width: 100%;
+    background-color: unset;
+    justify-content: space-evenly;
+  }
+  .menu a {
+    background-color: #e8e8e8;
+    margin: 0 20px;
+    font-size: 18px;
+  }
+  .goal {
+    font-size: 22px;
+    margin-top: 24px;
+  }
+  footer-menu {
+    margin-bottom: 130px;
+    display: flex;
+    column-gap: 5%;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .footer-menu a {
+    text-decoration: none;
+    color: #b9b9b9;
+    font-size: 16px;
+  }
 }
 
 /* tablet */
+@media only screen and (min-width: 577px) and (max-width: 834px) {
+  .hero-info {
+    padding: 60px 0;
+  }
+  .hero-info h1 {
+    font-size: 40px;
+  }
+  .hero-info p {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .middle-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    margin-top: 30px;
+  }
+  .menu {
+    display: flex;
+    flex-direction: row;
+    height: unset;
+    width: 100%;
+    background-color: unset;
+    justify-content: space-evenly;
+  }
+  .menu a {
+    background-color: #e8e8e8;
+    margin: 0 20px;
+    font-size: 18px;
+  }
+  .visible {
+    display: block;
+  }
+}
