--- a/styles/upcoming-match.css
+++ b/styles/upcoming-match.css
@@ -43,6 +43,13 @@ main {
 .hero-img {
   align-self: flex-end;
   width: 50%;
+  opacity: 0.5;
+}
+
+.hero-img:hover {
+  transition: 3s;
+  transform: scale(0.9);
+  opacity: 1;
 }
 .hero-img img {
   width: 80%;
@@ -110,13 +117,14 @@ main {
   align-items: center;
   column-gap: 20px;
 }
-.flag span {
-  font-size: 16px;
-  font-weight: 700;
-}
+
 .flag img {
   width: 93.04px;
   height: 56.18px;
+}
+.flag span {
+  font-size: 16px;
+  font-weight: 700;
 }
 .tag {
   font-size: 16px;
@@ -151,6 +159,18 @@ main {
   background-color: #dd0000;
   color: white;
 }
+.view-btn {
+  margin-top: 30px;
+  text-decoration: none;
+  color: #ffff;
+  font-size: 20px;
+  padding: 16px 30px;
+  background-color: #dd0000;
+  border-radius: 5px;
+}
+.visible {
+  display: none;
+}
 /* footer section  */
 footer {
   margin-top: 130px;
@@ -173,10 +193,136 @@ footer hr {
 }
 .footer-menu {
   margin-bottom: 130px;
+  display: flex;
+  column-gap: 5%;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .footer-menu a {
   text-decoration: none;
   color: #b9b9b9;
   font-size: 16px;
-  padding-right: 70px;
+}
+
+/* media queries */
+/* mobile  */
+@media only screen and (max-width: 576px) and (max-width: 833px) {
+  .hero-container {
+    flex-direction: column;
+  }
+  .hero-info {
+    display: flex;
+    margin: 0;
+    flex-direction: column;
+    align-items: center;
+  }
+  .hero-img {
+    align-self: center;
+    justify-self: flex-end;
+  }
+  .hero-img img {
+    margin-top: 20px;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+  }
+  .hero-info h1 {
+    font-size: 22px;
+    text-align: center;
+    margin-top: 28px;
+  }
+  .hero-info p {
+    font-size: 14px;
+    text-align: center;
+  }
+  .hero-info p {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .middle-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .cards {
+    grid-template-columns: 1fr;
+    width: 100%;
+    margin-top: 30px;
+  }
+  .menu {
+    display: flex;
+
+    height: unset;
+    width: 100%;
+    background-color: unset;
+    justify-content: space-evenly;
+  }
+  .menu a {
+    background-color: #e8e8e8;
+    margin: 0 20px;
+    font-size: 18px;
+  }
+  .goal {
+    font-size: 22px;
+    margin-top: 24px;
+  }
+  .footer-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 17px;
+    margin-bottom: 20px;
+  }
+  .footer-menu a {
+    padding: unset;
+  }
+}
+
+/* tablet */
+@media only screen and (min-width: 577px) and (max-width: 834px) {
+  .hero-info {
+    padding: 60px 0;
+  }
+  .hero-info h1 {
+    font-size: 40px;
+  }
+  .hero-info p {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .middle-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    margin-top: 30px;
+  }
+  .menu {
+    display: flex;
+    flex-direction: row;
+    height: unset;
+    width: 100%;
+    background-color: unset;
+    justify-content: space-evenly;
+  }
+  .menu a {
+    background-color: #e8e8e8;
+    margin: 0 20px;
+    font-size: 18px;
+  }
+  .visible {
+    display: block;
+  }
 }
